--- a/css/main-style.css
+++ b/css/main-style.css
@@ -42,22 +42,61 @@ html {
   display:none;
 }
 
+#show-instructions, .about-link {
+  margin: 0;
+  border: none;
+  box-sizing: border-box;
+  line-height: 1.5;
+}
+
 .header nav {
   margin-left:auto;
   padding: 10px 20px;
-  background-color: #b62e2e;
   color: #fff;
   border: none;
-  border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
   text-align:center;
   align-self:center; 
 }
 
-.header nav a {
-  color:#fff;
+#show-instructions, .about-link {
+  display: inline-block;
+  padding: 10px 20px;
+  color: #fff;
+  background-color: #b62e2e;
+  border-radius: 5px;
   text-decoration: none;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#show-instructions:hover, .about-link:hover {
+  background-color: #0056b3;
+}
+
+.modal-content ul {
+  margin: 20px 0;
+  padding-left: 40px; 
+  list-style-type: disc;
+}
+
+.modal-content li {
+  font-size: 16px;
+  margin-bottom: 16px;
+  line-height: 1.5;  
+  font-family: 'Cinzel Decorative', serif;
+  color: #6b0505;
+}
+
+.modal-content h2 {
+  margin-top: 0;
+  font-family: 'Playfair Display', serif;
+  font-size: 20px;
+  color: #6b0505;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 main {
@@ -357,6 +396,46 @@ word-wrap: break-word;
   background-position: center;
 }
 
+.instructions-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  z-index: 1000;
+  display: flex; /* add this */
+  justify-content: center; /* horizontally center */
+  align-items: center; /* vertically center */
+}
+
+
+.modal-content {
+  padding: 20px;
+  width: 60%;
+  max-height: 80vh;
+  overflow-y: auto;
+  background-color: #fefefe;
+  border: 1px solid #888;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  margin: 0 0px 10px 10px;
+}
+
+.close-button:hover, .close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 992px) {
 
   .header{
@@ -386,13 +465,15 @@ word-wrap: break-word;
 
 
   .header nav {
-    margin-left:auto;
     margin-right:2.5%;
-    padding: 10px 20px;
-    background-color: #b62e2e;
-    color: #fff;
-    border-radius: 8px;
-    font-size: 16px;
+  }
+
+  .modal-content li {
+    font-size: 24px;
+  }
+  
+  .modal-content h2 {
+    font-size: 32px;
   }
 
   main {
