--- a/css/intro-style.css
+++ b/css/intro-style.css
@@ -208,6 +208,14 @@ button.start-button a {
 
 /* large screens */
 @media screen and (min-width: 1024px) {
+  button, button[type="submit"], button.start-button{
+    font-size: 24px;
+  }
+
+  label{
+    font-size: 24px;
+  }
+
   .image-container, .detec-image-container {
       width: 23%; 
   }
